--- a/hdp/public/cadastroHDP.html
+++ b/hdp/public/cadastroHDP.html
@@ -95,7 +95,6 @@
             ) {
                 div_mensagem.innerHTML =
                 `<span style="color: yellow;"> - Todos os campos devem estar preenchidos!</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -106,7 +105,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Senha inválida, tente novamente! (a senha precisa ter pelo menos 1 caractere especial entre essas opções: (@ - # - $ - &))</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -114,7 +112,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - CPF inválido, tente novamente! (quantidade de dígitos errada)</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -122,7 +119,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Telefone inválido, tente novamente! (quantidade de dígitos errada)</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -130,7 +126,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Senha e senha de confirmação diferentes! Tente novamente</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -139,7 +134,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Senha inválida, tente novamente! (a senha precisa ter pelo menos 5 caracteres e no máximo 15 caracteres)</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -148,7 +142,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Email inválido, tente novamente! (o email precisa ter "@" e ".")</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -156,7 +149,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Empresa inválida! Essa empresa não está cadastrada em nosso sistema!</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -164,7 +156,6 @@
             ) {
                 div_mensagem.innerHTML = 
                 `<span style="color: yellow;"> - Empresa inválida! Código de segurança errado!</span><br><br>`;
-                finalizarAguardar();
                     fazerCadastro = false;
                 } 
 
@@ -189,17 +180,13 @@
         console.log("resposta: ", resposta);
 
         if (resposta.ok) {
-          cardErro.style.display = "block";
 
-          mensagem_erro.innerHTML =
+          div_mensagem.innerHTML =
             "Cadastro realizado com sucesso! Redirecionando para tela de Login...";
 
-          setTimeout(() => {
-            window.location = "login.html";
-          }, "2000");
-        } else {
-          throw "Houve um erro ao tentar realizar o cadastro!";
-        }
+            window.location.href = "loginHDP.html";
+
+        } 
       })
     }   
 
