--- a/hdp/public/calculadoraHDP.html
+++ b/hdp/public/calculadoraHDP.html
@@ -13,7 +13,7 @@
 
         <img src="assets/imgs/logo.png" alt="logo">
         <ul class="navbar">
-          <a href="siteHDP.html"><li>Home</li></a>
+          <a href="index.html"><li>Home</li></a>
             <li class="agora">Calculadora</li>
           <li>|</li>
           <a href="cadastroHDP.html">
