--- a/hdp/public/dashboard/tela-info1.html
+++ b/hdp/public/dashboard/tela-info1.html
@@ -111,11 +111,11 @@
             console.warn(item)
 
             document.getElementById("btnSala").innerHTML += `
-        <button style="color: red;" onclick="exibirSensores(${item.idSensor})" id="btnSala${item.idSensor}"><b style="color: black;">${item.idSensor} - </b>${item.nomeSala}</button><br>
+        <button style="color: red;" class="botoesDash" onclick="exibirSensores(${item.idSensor})" id="btnSala${item.idSensor}"><b style="color: black;">${item.idSensor} - </b>${item.nomeSala}</button><br>
         `
 
             document.getElementById("graficos").innerHTML += `
-            <div id="grafico${item.idSensor}" class="display-none">
+            <div id="grafico${item.idSensor}" class="styleGraficos">
                 <h3 class="tituloGraficos">
                     <span id="tituloSala${item.idSensor}">${item.nomeSala}</span>
                 </h3>
@@ -253,46 +253,46 @@
         // setTimeout(() => atualizarGrafico(fkSensor, dados, myChart), 2000);
     }
 
-    // function atualizarGrafico(idSala, dados, myChart) {
+    function atualizarGrafico(fkSensor, dados, myChart) {
 
-    //     fetch(`/medidas/tempo-real/${fkSala}`, { cache: 'no-store' }).then(function (response) {
-    //         if (response.ok) {
-    //             response.json().then(function (novoRegistro) {
+        fetch(`/registro/grafico1TempoReal/${fkSensor}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (novoRegistro) {
 
-    //                 obterdados(idSala);
-    //                 // alertar(novoRegistro, idAquario);
-    //                 console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
-    //                 console.log(`Dados atuais do gráfico:`);
-    //                 console.log(dados);
-
-
-    //                 // tirando e colocando valores no gráfico
-    //                 dados.labels.shift(); // apagar o primeiro
-    //                 dados.labels.push(novoRegistro[0].Hora); // incluir um novo momento
-
-    //                 dados.datasets[0].data.shift();  // apagar o primeiro de umidade
-    //                 dados.datasets[0].data.push(novoRegistro[0].Umidade); // incluir uma nova medida de umidade
-
-    //                 dados.datasets[1].data.shift();  // apagar o primeiro de temperatura
-    //                 dados.datasets[1].data.push(novoRegistro[0].Temperatura); // incluir uma nova medida de temperatura
-
-    //                 myChart.update();
+                    obterdados(fkSensor);
+                    // alertar(novoRegistro, idAquario);
+                    console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+                    console.log(`Dados atuais do gráfico:`);
+                    console.log(dados);
 
 
-    //                 // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-    //                 proximaAtualizacao = setTimeout(() => atualizarGrafico(idSala, dados, myChart), 2000);
-    //             });
-    //         } else {
-    //             console.error('Nenhum dado encontrado ou erro na API');
-    //             // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
-    //             proximaAtualizacao = setTimeout(() => atualizarGrafico(idSala, dados, myChart), 2000);
-    //         }
-    //     })
-    //         .catch(function (error) {
-    //             console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
-    //         });
+                    // tirando e colocando valores no gráfico
+                    dados.labels.shift(); // apagar o primeiro
+                    dados.labels.push(novoRegistro[0].hora_insercao); // incluir um novo momento
 
-    // }
+                    dados.datasets[0].data.shift();  // apagar o primeiro de umidade
+                    dados.datasets[0].data.push(novoRegistro[0].umidade_ajustada); // incluir uma nova medida de umidade
+
+                    dados.datasets[1].data.shift();  // apagar o primeiro de temperatura
+                    dados.datasets[1].data.push(novoRegistro[0].temperatura_ajustada); // incluir uma nova medida de temperatura
+
+                    myChart.update();
+
+
+                    // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+                    proximaAtualizacao = setTimeout(() => atualizarGrafico(fkSensor, dados, myChart), 5000);
+                });
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+                // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+                proximaAtualizacao = setTimeout(() => atualizarGrafico(fkSensor, dados, myChart), 5000);
+            }
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+
+    }
 
 </script>
 
